added logo and updated frontend styling

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,7 @@
       rel="stylesheet"
     />
 
-    <title>Subframe Vite Starter Kit</title>
+    <title>NeonTradeBot</title>
   </head>
   <body>
     <div id="root"></div>
